@@ -6,7 +6,8 @@ import { OnSellingProductsComponent } from '@components/store/on-selling-product
 const routes: Routes = [{
   path: '',
   children: [
-  { path: '', pathMatch: 'full', component: OnSellingProductsComponent},{ path: 'custom/:name', loadChildren: () => import('./items/items.module').then(m => m.ItemsModule), data: { title: 'custom', breadcrumb: '{{name}}' } }
+    { path: '', pathMatch: 'full', component: OnSellingProductsComponent},{ path: 'custom/:name', loadChildren: () => import('./items/items.module').then(m => m.ItemsModule), data: { title: 'custom', breadcrumb: '{{name}}' } },
+    { path: 'new', loadChildren: () => import('./new-items/new-items.module').then(m => m.NewItemsModule), data: { title: 'new', breadcrumb: 'New' } },
   ]
 }
 ];
